--- a/.github/workflows/Update-WakaTime.yml
+++ b/.github/workflows/Update-WakaTime.yml
@@ -15,6 +15,7 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           LOCALE: "pt-BR"
+          SHOW_UPDATED_DATE: "True"
           SHOW_PROFILE_VIEWS: "True"
           SHOW_COMMIT: "True"
           SHOW_DAYS_OF_WEEK: "True"
