--- a/.github/workflows/Update-WakaTime.yml
+++ b/.github/workflows/Update-WakaTime.yml
@@ -25,4 +25,5 @@ jobs:
           SHOW_LANGUAGE_PER_REPO: "True"
           SHOW_SHORT_INFO: "False"
           SYMBOL_VERSION: "3"
+          SHOW_LOC_CHART: "False"
           
