--- a/.github/workflows/Update-WakaTime.yml
+++ b/.github/workflows/Update-WakaTime.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          LOCALE: "pt-BR"
+          LOCALE: "pt_BR"
           SHOW_UPDATED_DATE: "True"
           SHOW_PROFILE_VIEWS: "True"
           SHOW_COMMIT: "True"
