--- a/.github/workflows/Update-WakaTime.yml
+++ b/.github/workflows/Update-WakaTime.yml
@@ -20,6 +20,7 @@ jobs:
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_LANGUAGE: "True"
           SHOW_OS: "True"
+          SHOW_PROFILE_VIEWS: "False"
           SHOW_EDITORS: "True"
           SHOW_LANGUAGE_PER_REPO: "True"
           SHOW_SHORT_INFO: "False"
